--- a/45-FullCard/css/style.css
+++ b/45-FullCard/css/style.css
@@ -1,12 +1,11 @@
-*{
+* {
   margin: 0;
   padding: 0;
- 
 }
 body {
   background: #f3f4f4;
   font-family: 'Roboto Condensed', sans-serif;
-  overflow: hidden;    
+  overflow: hidden;
 }
 .mr2 {
   margin-right: 1rem;
@@ -17,10 +16,12 @@ body {
 .article-title {
   font-size: 2.5rem;
   line-height: 1;
- font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: 0.025em;
-  transition: font-size 0.45s ease-in-out, color 0.3s ease-out;
+  transition:
+    font-size 0.45s ease-in-out,
+    color 0.3s ease-out;
 }
 .header-image {
   height: 220px;
@@ -33,7 +34,7 @@ body {
 }
 .overlay {
   transition: all 0.3s ease-in-out;
-  background: ;
+  background:;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -66,7 +67,7 @@ body {
   display: block;
   transition: all 0.25s ease-in-out;
 }
- 
+
 .book__cover {
   height: 100%;
   width: 100%;
@@ -89,8 +90,8 @@ body {
 .book {
   overflow: hidden;
   background: white;
-  height: 580px;
-  width: 400px;
+  height: 340px;
+  width: 240px;
   box-shadow: 0 20px 30px -10px #ccc;
   transition: all 0.5s ease-in-out;
 }
@@ -127,12 +128,12 @@ body {
 .book--expanded .header-image {
   height: 100%;
 }
-span{
-   margin-left: -35px;
+span {
+  margin-left: -35px;
 }
 span .fa {
-   font-size: 17px;
-   margin-left: 20px;
+  font-size: 17px;
+  margin-left: 20px;
 }
 
 /* 添加的内容 */
@@ -145,10 +146,10 @@ span .fa {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .social i {
-  margin: .5rem;
+  margin: 0.5rem;
   color: #7a7a7a;
 }
 .book__expanded .book__content {
